--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "npm install && (cd server && node --experimental-modules server.mjs)"
+  command = "npm install"
   publish = "public" # Путь к папке, которая будет опубликована
