--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,3 @@
 [build]
+  command = "npm install && (cd server && nodemon server.mjs)"
   publish = "public" # Путь к папке, которая будет опубликована
