--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "node server/server.mjs"
+  },
   "dependencies": {
     "daemon": "^1.1.0",
     "express": "^4.18.2"
