--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "prestart": "npm run compile:templates",
     "start": "node server/server.mjs",
-    "compile:templates": "handlebars components/RegFooter/RegFooter.hbs -f components/RegFooter/RegFooter.precompiled.js && handlebars components/Header/Header.hbs -f components/Header/Header.precompiled.js && handlebars components/SignInLink/SignInLink.hbs -f components/SignInLink/SignInLink.precompiled.js && handlebars components/NetflixLogo/NetflixLogo.hbs -f components/NetflixLogo/NetflixLogo.precompiled.js && handlebars components/SubmitRegisterButton/SubmitRegisterButton.hbs -f components/SubmitRegisterButton/SubmitRegisterButton.precompiled.js && handlebars components/RegisterStepHeader/RegisterStepHeader.hbs -f components/RegisterStepHeader/RegisterStepHeader.precompiled.js && handlebars components/RegisterContextBody/RegisterContextBody.hbs -f components/RegisterContextBody/RegisterContextBody.precompiled.js && handlebars components/FinishAccContent/FinishAccContent.hbs -f components/FinishAccContent/FinishAccContent.precompiled.js"
+    "compile:templates": "bash hbs.sh"
   },
   "dependencies": {
     "daemon": "^1.1.0",
