--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "scripts": {
     "prestart": "npm run compile:templates",
+    "build": "node build.js",
     "start": "node server/server.mjs",
-    "compile:templates": "bash compile-templates.sh"
+    "compile:templates": "handlebars src/pages/login/components/footer/footer.hbs -f src/pages/login/components/footer/footer.precompiled.js && handlebars src/pages/login/components/header/header.hbs -f src/pages/login/components/header/header.precompiled.js && handlebars src/pages/login/components/body/body.hbs -f src/pages/login/components/body/body.precompiled.js && handlebars src/pages/feed/components/header/header-feed.hbs -f src/pages/feed/components/header/header-feed.precompiled.js compile-templates.sh"
   },
   "dependencies": {
     "daemon": "^1.1.0",
