--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "prestart": "npm run compile:templates",
     "start": "node server/server.mjs",
-    "compile:templates": "bash hbs.sh"
+    "compile:templates": "bash  compile-templates.sh"
   },
   "dependencies": {
     "daemon": "^1.1.0",
