--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "compile:templates": "bash compile-templates.sh"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "daemon": "^1.1.0",
     "express": "^4.18.2",
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "uuid": "^9.0.1"
   }
 }
