--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "prestart": "npm run compile:templates",
     "build": "node build.js",
     "start": "node server/server.mjs",
-    "compile:templates": "bash compile-templates.sh"
+    "compile:templates": "bash compile-templates.sh",
+    "lint": "eslint .",
+    "lint:css": "stylelint '**/*.css'"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -11,5 +13,10 @@
     "express": "^4.18.2",
     "handlebars": "^4.7.8",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.50.0",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard": "^34.0.0"
   }
 }
