--- a/package.json
+++ b/package.json
@@ -4,19 +4,14 @@
     "build": "node build.js",
     "start": "node server/server.mjs",
     "compile:templates": "bash compile-templates.sh",
-    "lint": "eslint .",
-    "lint:css": "stylelint '**/*.css'"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "daemon": "^1.1.0",
     "express": "^4.18.2",
-    "handlebars": "^4.7.8",
-    "uuid": "^9.0.1"
+    "handlebars": "^4.7.8"
   },
   "devDependencies": {
-    "eslint": "^8.50.0",
-    "stylelint": "^15.10.3",
-    "stylelint-config-standard": "^34.0.0"
+    "eslint": "^8.50.0"
   }
 }
