--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "daemon": "^1.1.0",
+    "eslint-plugin-import": "^2.28.1",
     "express": "^4.18.2",
     "handlebars": "^4.7.8"
   },
