--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "handlebars": "^4.7.8"
   },
   "devDependencies": {
-    "eslint": "^8.50.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.3"
+    "eslint": "^8.50.0"
   }
 }
