--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "handlebars": "^4.7.8"
   },
   "devDependencies": {
-    "eslint": "^8.50.0"
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "babel-loader": "^9.1.3",
+    "eslint": "^8.50.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-glob-entry": "^2.1.1"
   }
 }
