--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "start": "npm run build && node server/server.mjs",
-    "lint": "eslint .",
-    "compile:templates": "bash compile-templates.sh"
+    "lint": "eslint ."
   },
   "dependencies": {
     "daemon": "^1.1.0",
@@ -16,6 +15,7 @@
     "@babel/preset-env": "^7.23.3",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.50.0",
     "file-loader": "^6.2.0",
