--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "cssnano": "^6.0.1",
     "daemon": "^1.1.0",
     "express": "^4.18.2",
     "handlebars-loader": "^1.7.3",
-    "html-webpack-plugin": "^5.5.3"
+    "html-webpack-plugin": "^5.5.3",
+    "postcss-import": "^15.1.0",
+    "postcss-preset-env": "^9.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
@@ -22,6 +25,7 @@
     "handlebars": "^4.7.8",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.31",
+    "postcss-cli": "^10.1.0",
     "postcss-loader": "^7.3.3",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
