--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint": "^8.50.0",
     "file-loader": "^6.2.0",
     "handlebars": "^4.7.8",
@@ -32,6 +33,7 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-glob-entry": "^2.1.1"
+    "webpack-glob-entry": "^2.1.1",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
