--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.5.3",
     "postcss-import": "^15.1.0",
-    "postcss-preset-env": "^9.3.0"
+    "postcss-preset-env": "^9.3.0",
+    "transliteration": "^2.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
