--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-glob-entry": "^2.1.1",
-    "workbox-webpack-plugin": "^7.0.0"
+    "webpack-glob-entry": "^2.1.1"
   }
 }
