--- a/.github/workflows/S3.yaml
+++ b/.github/workflows/S3.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Download build
         uses: actions/download-artifact@v1
         with:
-          name: build
+          name: bundle
       - name: Upload to hotbox
         uses: jakejarvis/s3-sync-action@master
         with:
@@ -46,4 +46,4 @@ jobs:
           AWS_S3_BUCKET: frontend-deploy
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          SOURCE_DIR: "build"
+          SOURCE_DIR: "bundle"
