--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -36,13 +36,13 @@
        - name: Download build
          uses: actions/download-artifact@v1
          with:
-           name: build
+           name: bundle
        - name: Transfer build files to server
          uses: appleboy/scp-action@master
          with:
            host: 212.233.122.175
            username: ubuntu
            key: ../../../2023-2-Holi-DivDpZ5F.pem
-           source: "build/*"
+           source: "bundle/*"
            target: "/home/ubuntu/frontend"
            strip_components: 1
