--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -1,48 +1,48 @@
-# name: Simple Build
-#
-# on:
-#   push:
-#     branches: [new_stable]
-#
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#
-#     steps:
-#       - name: Install Node
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: 16
-#
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-#
-#       - name: Install deps
-#         run: npm ci
-#
-#       - name: Build
-#         run: npm run build
-#
-#       - name: Upload build result
-#         uses: actions/upload-artifact@v1
-#         with:
-#           name: bundle
-#           path: ./bundle
-#
-#   deploy:
-#     runs-on: ubuntu-latest
-#     needs: build
-#     steps:
-#       - name: Download build
-#         uses: actions/download-artifact@v1
-#         with:
-#           name: bundle
-#       - name: Transfer build files to server
-#         uses: appleboy/scp-action@master
-#         with:
-#           host: 212.233.122.175
-#           username: ubuntu
-#           key: ${{ secrets.PRIVATE_KEY }}
-#           source: "bundle/*"
-#           target: "/home/ubuntu/frontend"
-#           strip_components: 1
+ name: Simple Build
+
+ on:
+   push:
+     branches: [new_stable]
+
+ jobs:
+   build:
+     runs-on: ubuntu-latest
+
+     steps:
+       - name: Install Node
+         uses: actions/setup-node@v3
+         with:
+           node-version: 16
+
+       - name: Checkout code
+         uses: actions/checkout@v2
+
+       - name: Install deps
+         run: npm ci
+
+       - name: Build
+         run: npm run build
+
+       - name: Upload build result
+         uses: actions/upload-artifact@v1
+         with:
+           name: bundle
+           path: ./bundle
+
+   deploy:
+     runs-on: ubuntu-latest
+     needs: build
+     steps:
+       - name: Download build
+         uses: actions/download-artifact@v1
+         with:
+           name: bundle
+       - name: Transfer build files to server
+         uses: appleboy/scp-action@master
+         with:
+           host: 212.233.122.175
+           username: ubuntu
+           key: ${{ secrets.PRIVATE_KEY }}
+           source: "bundle/*"
+           target: "/home/ubuntu/frontend"
+           strip_components: 1
