--- a/.github/workflows/S3.yaml
+++ b/.github/workflows/S3.yaml
@@ -1,49 +1,49 @@
-name: S3 deploy
-
-on:
-  push:
-    branches: [deploy]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Install Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 16
-
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install deps
-        run: npm ci
-
-      - name: Build
-        run: npm run build
-
-      - name: Upload build result
-        uses: actions/upload-artifact@v1
-        with:
-          name: bundle
-          path: ./bundle
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@master
-      - name: Download build
-        uses: actions/download-artifact@v1
-        with:
-          name: bundle
-      - name: Upload to hotbox
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --endpoint-url https://hb.vkcs.cloud --acl public-read --follow-symlinks
-        env:
-          AWS_S3_BUCKET: frontend-deploy
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          SOURCE_DIR: "bundle"
+#name: S3 deploy
+#
+#on:
+#  push:
+#    branches: [deploy]
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Install Node
+#        uses: actions/setup-node@v1
+#        with:
+#          node-version: 16
+#
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: Install deps
+#        run: npm ci
+#
+#      - name: Build
+#        run: npm run build
+#
+#      - name: Upload build result
+#        uses: actions/upload-artifact@v1
+#        with:
+#          name: bundle
+#          path: ./bundle
+#
+#  deploy:
+#    runs-on: ubuntu-latest
+#    needs: build
+#    steps:
+#      - uses: actions/checkout@master
+#      - name: Download build
+#        uses: actions/download-artifact@v1
+#        with:
+#          name: bundle
+#      - name: Upload to hotbox
+#        uses: jakejarvis/s3-sync-action@master
+#        with:
+#          args: --endpoint-url https://hb.vkcs.cloud --acl public-read --follow-symlinks
+#        env:
+#          AWS_S3_BUCKET: frontend-deploy
+#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          SOURCE_DIR: "bundle"
