--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,6 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
-bundle
-
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -43,6 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+bundle/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
